--- a/conf/test.config
+++ b/conf/test.config
@@ -20,10 +20,6 @@ params {
     max_time   = '6.h'
 
     // Input data
-    // TODO nf-core: Specify the paths to your test data on nf-core/test-datasets
-    // TODO nf-core: Give any required params for the test so that command line flags are not needed
-    input  = 'https://raw.githubusercontent.com/nf-core/test-datasets/viralrecon/samplesheet/samplesheet_test_illumina_amplicon.csv'
-
-    // Fasta references
-    fasta = 'https://raw.githubusercontent.com/nf-core/test-datasets/viralrecon/genome/NC_045512.2/GCF_009858895.2_ASM985889v3_genomic.200409.fna.gz'
+    markerfasta = 'https://data.gtdb.ecogenomic.org/releases/release86/86.2/ar122_ssu_r86.2.fna'
+    phylogeny   = 'https://data.gtdb.ecogenomic.org/releases/release86/86.2/ar122_r86.2.tree'
 }
