--- a/nextflow.config
+++ b/nextflow.config
@@ -9,10 +9,9 @@
 // Global default params, used in configs
 params {
 
-    // TODO nf-core: Specify your pipeline's command line flags
     // Input options
-    input                      = null
-    fasta                      = null
+    markerfasta                = null
+    phylogeny                  = null
 
     // MultiQC options
     multiqc_config             = null
