Switch from markerfasta to input

--- a/conf/test.config
+++ b/conf/test.config
@@ -20,6 +20,6 @@ params {
     max_time   = '6.h'
 
     // Input data
-    markerfasta = 'https://data.gtdb.ecogenomic.org/releases/release86/86.2/ar122_ssu_r86.2.fna'
-    phylogeny   = 'https://data.gtdb.ecogenomic.org/releases/release86/86.2/ar122_r86.2.tree'
+    input      = 'https://data.gtdb.ecogenomic.org/releases/release86/86.2/ar122_ssu_r86.2.fna'
+    phylogeny  = 'https://data.gtdb.ecogenomic.org/releases/release86/86.2/ar122_r86.2.tree'
 }
