Add clustalo align

--- a/conf/test.config
+++ b/conf/test.config
@@ -20,6 +20,7 @@ params {
     max_time   = '6.h'
 
     // Input data
+    markername = 'testmarker'
     input      = 'https://data.gtdb.ecogenomic.org/releases/release86/86.2/ar122_ssu_r86.2.fna'
     phylogeny  = 'https://data.gtdb.ecogenomic.org/releases/release86/86.2/ar122_r86.2.tree'
 }
