--- a/nextflow.config
+++ b/nextflow.config
@@ -11,6 +11,7 @@ params {
 
     // Input options
     input                      = null
+    markername                 = 'markers'
     phylogeny                  = null
 
     // MultiQC options
