Add taxonomy to params

--- a/conf/test.config
+++ b/conf/test.config
@@ -22,5 +22,6 @@ params {
     // Input data
     markername = 'testmarker'
     input      = 'https://data.gtdb.ecogenomic.org/releases/release86/86.2/ar122_ssu_r86.2.fna'
+    taxononomy = 'https://data.gtdb.ecogenomic.org/releases/release86/86.2/ar122_metadata_r86.2.tsv'
     phylogeny  = 'https://data.gtdb.ecogenomic.org/releases/release86/86.2/ar122_r86.2.tree'
 }
