Reverse complement input

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -18,6 +18,10 @@ process {
         saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
     ]
 
+    withName: EMBOSS_REVSEQ {
+        ext.args   = '-notag'
+    }
+
     withName: CUSTOM_DUMPSOFTWAREVERSIONS {
         publishDir = [
             path: { "${params.outdir}/pipeline_info" },
