--- a/conf/test.config
+++ b/conf/test.config
@@ -15,13 +15,11 @@ params {
     config_profile_description = 'Minimal test dataset to check pipeline function'
 
     // Limit resources so that this can run on GitHub Actions
-    max_cpus   = 2
-    max_memory = '6.GB'
-    max_time   = '6.h'
+    max_cpus    = 2
+    max_memory  = '6.GB'
+    max_time    = '6.h'
 
     // Input data
-    markername = 'testmarker'
-    input      = 'https://data.gtdb.ecogenomic.org/releases/release86/86.2/ar122_ssu_r86.2.fna'
-    taxononomy = 'https://data.gtdb.ecogenomic.org/releases/release86/86.2/ar122_metadata_r86.2.tsv'
-    phylogeny  = 'https://data.gtdb.ecogenomic.org/releases/release86/86.2/ar122_r86.2.tree'
+    markername  = 'arc-ssu-r86'
+    input       = 'https://data.gtdb.ecogenomic.org/releases/release86/86.2/ar122_ssu_r86.2.fna'
 }
