Align with hmmalign

--- a/conf/test.config
+++ b/conf/test.config
@@ -22,4 +22,6 @@ params {
     // Input data
     markername  = 'arc-ssu-r86'
     input       = 'https://data.gtdb.ecogenomic.org/releases/release86/86.2/ar122_ssu_r86.2.fna'
+    hmm         = 'https://raw.githubusercontent.com/tseemann/barrnap/master/db/arc.hmm'
+    hmmkey      = '16S_rRNA'
 }
