--- a/nextflow.config
+++ b/nextflow.config
@@ -11,6 +11,8 @@ params {
 
     // Input options
     input                       = null
+    hmm                         = null
+    hmmkey                      = null
     markername                  = 'markers'
 
     // MultiQC options
