Works until Sativa

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -22,6 +22,18 @@ process {
         ext.args   = '-notag'
     }
 
+    withName: HMMER_ESLALIMASK {
+        ext.args   = '--rf-is-mask'
+    }
+
+    withName: HMMER_ESLREFORMAT {
+        ext.args   = 'afa'
+    }
+
+    withName: SATIVA {
+        ext.args   = { "-x ${params.sativa_domain}" }
+    }
+
     withName: CUSTOM_DUMPSOFTWAREVERSIONS {
         publishDir = [
             path: { "${params.outdir}/pipeline_info" },
