--- a/nextflow.config
+++ b/nextflow.config
@@ -14,6 +14,7 @@ params {
     hmm                         = null
     hmmkey                      = null
     markername                  = 'markers'
+    sativa_domain               = 'bac'
 
     // MultiQC options
     multiqc_config              = null
