--- a/conf/test_full.config
+++ b/conf/test_full.config
@@ -15,10 +15,8 @@ params {
     config_profile_description = 'Full test dataset to check pipeline function'
 
     // Input data for full size test
-    // TODO nf-core: Specify the paths to your full test data ( on nf-core/test-datasets or directly in repositories, e.g. SRA)
-    // TODO nf-core: Give any required params for the test so that command line flags are not needed
-    input = 'https://raw.githubusercontent.com/nf-core/test-datasets/viralrecon/samplesheet/samplesheet_full_illumina_amplicon.csv'
-
-    // Genome references
-    genome = 'R64-1-1'
+    markername  = 'arc-ssu-r86'
+    input       = 'https://data.gtdb.ecogenomic.org/releases/release86/86.2/ar122_ssu_r86.2.fna'
+    hmm         = 'https://raw.githubusercontent.com/tseemann/barrnap/master/db/arc.hmm'
+    hmmkey      = '16S_rRNA'
 }
