Extraction of variable number of correct sequences per species

--- a/conf/test.config
+++ b/conf/test.config
@@ -15,13 +15,14 @@ params {
     config_profile_description = 'Minimal test dataset to check pipeline function'
 
     // Limit resources so that this can run on GitHub Actions
-    max_cpus    = 2
-    max_memory  = '6.GB'
-    max_time    = '6.h'
+    max_cpus            = 2
+    max_memory          = '6.GB'
+    max_time            = '6.h'
 
     // Input data
-    markername  = 'arc-ssu-r86'
-    input       = 'testdata/test.fna'
-    hmm         = 'https://raw.githubusercontent.com/tseemann/barrnap/master/db/arc.hmm'
-    hmmkey      = '16S_rRNA'
+    markername          = 'arc-ssu-r86'
+    input               = 'testdata/test.fna'
+    hmm                 = 'https://raw.githubusercontent.com/tseemann/barrnap/master/db/arc.hmm'
+    hmmkey              = '16S_rRNA'
+    n_per_species       = '1,3'
 }
