--- a/conf/test_full.config
+++ b/conf/test_full.config
@@ -15,8 +15,9 @@ params {
     config_profile_description = 'Full test dataset to check pipeline function'
 
     // Input data for full size test
-    markername  = 'arc-ssu-r86'
-    input       = 'https://data.gtdb.ecogenomic.org/releases/release86/86.2/ar122_ssu_r86.2.fna'
-    hmm         = 'https://raw.githubusercontent.com/tseemann/barrnap/master/db/arc.hmm'
-    hmmkey      = '16S_rRNA'
+    markername          = 'arc-ssu-r86'
+    input               = 'https://data.gtdb.ecogenomic.org/releases/release86/86.2/ar122_ssu_r86.2.fna'
+    hmm                 = 'https://raw.githubusercontent.com/tseemann/barrnap/master/db/arc.hmm'
+    hmmkey              = '16S_rRNA'
+    n_per_species       = '1,3'
 }
