--- a/nextflow.config
+++ b/nextflow.config
@@ -15,6 +15,7 @@ params {
     hmmkey                      = null
     markername                  = 'markers'
     sativa_domain               = 'bac'
+    n_per_species               = '1'
 
     // MultiQC options
     multiqc_config              = null
