--- a/conf/modules.config
+++ b/conf/modules.config
@@ -34,6 +34,14 @@ process {
         ext.args   = { "-x ${params.sativa_domain}" }
     }
 
+    withName: SEQTK_SUBSEQ {
+        publishDir = [
+            path: { "${params.outdir}/correct/" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : "${filter_list}.correct.fna.gz" }
+        ]
+    }
+
     withName: CUSTOM_DUMPSOFTWAREVERSIONS {
         publishDir = [
             path: { "${params.outdir}/pipeline_info" },
