--- a/conf/modules.config
+++ b/conf/modules.config
@@ -30,6 +30,10 @@ process {
         ext.args   = 'afa'
     }
 
+    withName: BIOPYTHON_FILTERGAPPY {
+        ext.args   = { "$params.non_gap_prop" }
+    }
+
     withName: SATIVA {
         ext.args   = { "-x ${params.sativa_domain}" }
     }
