--- a/nextflow.config
+++ b/nextflow.config
@@ -16,6 +16,7 @@ params {
     markername                  = 'markers'
     sativa_domain               = 'bac'
     n_per_species               = '1'
+    non_gap_prop                = 0.9
 
     // MultiQC options
     multiqc_config              = null
