Read GTDB metadata to output quality sorted sequences

--- a/conf/test.config
+++ b/conf/test.config
@@ -24,5 +24,6 @@ params {
     input               = 'testdata/test.fna'
     hmm                 = 'https://raw.githubusercontent.com/tseemann/barrnap/master/db/arc.hmm'
     hmmkey              = '16S_rRNA'
+    gtdb_metadata       = 'testdata/test.metadata.tsv'
     n_per_species       = '1,3'
 }
