--- a/nextflow.config
+++ b/nextflow.config
@@ -13,6 +13,7 @@ params {
     input                       = null
     hmm                         = null
     hmmkey                      = null
+    gtdb_metadata               = null
     markername                  = 'markers'
     sativa_domain               = 'bac'
     n_per_species               = '1'
