--- a/nextflow.config
+++ b/nextflow.config
@@ -168,8 +168,9 @@ profiles {
         executor.cpus           = 4
         executor.memory         = 8.GB
     }
-    test      { includeConfig 'conf/test.config'      }
-    test_full { includeConfig 'conf/test_full.config' }
+    test       { includeConfig 'conf/test.config'       }
+    test_empty { includeConfig 'conf/test_empty.config' }
+    test_full  { includeConfig 'conf/test_full.config'  }
 }
 
 // Set default registry for Apptainer, Docker, Podman and Singularity independent of -profile
