Add maxlen parameter

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -18,6 +18,10 @@ process {
         saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
     ]
 
+    withName: MAXLEN {
+        ext.args   = { "--max-len $params.maxlen" }
+    }
+
     withName: EMBOSS_REVSEQ {
         ext.args   = '-notag'
     }
