--- a/nextflow.config
+++ b/nextflow.config
@@ -17,6 +17,7 @@ params {
     markername                  = 'markers'
     sativa_domain               = 'bac'
     n_per_species               = '1'
+    maxlen                      = 2000
     non_gap_prop                = 0.9
 
     // MultiQC options
