Reworked sequence filter

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -34,7 +34,7 @@ process {
         ext.args   = 'afa'
     }
 
-    withName: BIOSTRINGS_FILTERGAPPY {
+    withName: FILTERGAPPY {
         ext.args   = { "$params.non_gap_prop" }
     }
 
