--- a/conf/test.config
+++ b/conf/test.config
@@ -24,6 +24,7 @@ params {
     input               = 'testdata/test.fna'
     hmm                 = 'https://raw.githubusercontent.com/tseemann/barrnap/master/db/arc.hmm'
     hmmkey              = '16S_rRNA'
+    non_gap_prop        = 0.8
     gtdb_metadata       = 'testdata/test.metadata.tsv'
     n_per_species       = '1,3'
 }
