--- a/conf/test_full.config
+++ b/conf/test_full.config
@@ -19,6 +19,7 @@ params {
     input               = 'https://data.gtdb.ecogenomic.org/releases/release86/86.2/ar122_ssu_r86.2.fna'
     hmm                 = 'https://raw.githubusercontent.com/tseemann/barrnap/master/db/arc.hmm'
     hmmkey              = '16S_rRNA'
+    non_gap_prop        = 0.8
     gtdb_metadata       = 'https://data.gtdb.ecogenomic.org/releases/release86/86.2/ar122_metadata_r86.2.tsv'
     n_per_species       = '1,3'
 }
