--- a/conf/test.config
+++ b/conf/test.config
@@ -26,5 +26,6 @@ params {
     hmmkey              = '16S_rRNA'
     non_gap_prop        = 0.8
     gtdb_metadata       = 'testdata/test.metadata.tsv'
+    phylogeny           = 'https://data.gtdb.ecogenomic.org/releases/release86/86.2/ar122_r86.2.tree'
     n_per_species       = '1,3'
 }
