--- a/conf/test_full.config
+++ b/conf/test_full.config
@@ -21,5 +21,6 @@ params {
     hmmkey              = '16S_rRNA'
     non_gap_prop        = 0.8
     gtdb_metadata       = 'https://data.gtdb.ecogenomic.org/releases/release86/86.2/ar122_metadata_r86.2.tsv'
+    phylogeny           = 'https://data.gtdb.ecogenomic.org/releases/release86/86.2/ar122_r86.2.tree'
     n_per_species       = '1,3'
 }
