--- a/nextflow.config
+++ b/nextflow.config
@@ -14,6 +14,7 @@ params {
     hmm                         = null
     hmmkey                      = null
     gtdb_metadata               = null
+    phylogeny                   = null
     markername                  = 'markers'
     sativa_domain               = 'bac'
     n_per_species               = '1'
