Mask and reformat

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -26,12 +26,40 @@ process {
         ext.args   = '-notag'
     }
 
-    withName: HMMER_ESLALIMASK {
+    withName: MASKINPUT {
         ext.args   = '--rf-is-mask'
+        publishDir = [
+            path: "${params.outdir}/hmmer",
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
     }
 
-    withName: HMMER_ESLREFORMAT {
+    withName: REFORMATINPUT {
         ext.args   = 'afa'
+        publishDir = [
+            path: "${params.outdir}/hmmer",
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+    }
+
+    withName: MASKSELECTED {
+        ext.args   = '--rf-is-mask'
+        publishDir = [
+            path: "${params.outdir}/hmmer",
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+    }
+
+    withName: REFORMATSELECTED {
+        ext.args   = 'afa'
+        publishDir = [
+            path: "${params.outdir}/hmmer",
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
     }
 
     withName: FILTERGAPPY {
