Pass only n=1 to phylo

--- a/nextflow.config
+++ b/nextflow.config
@@ -16,6 +16,7 @@ params {
     gtdb_metadata               = null
     phylogeny                   = null
     markername                  = 'markers'
+    model                       = 'GTR+F+I'
     sativa_domain               = 'bac'
     n_per_species               = '1'
     maxlen                      = 2000
