Write final fastas for assignTaxonomy and addSpecies

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -70,11 +70,19 @@ process {
         ext.args   = { "-x ${params.sativa_domain}" }
     }
 
-    withName: SEQTK_SUBSEQ {
+    withName: SUBSEQ_SETS {
         publishDir = [
             path: { "${params.outdir}/correct/" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : "${filter_list.toString() - '.seqnames'}.correct.fna.gz" }
+        ]
+    }
+
+    withName: FINALFASTAS {
+        publishDir = [
+            path: { "${params.outdir}/correct/" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
     }
 
