Remove extra 'correct'

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -74,7 +74,7 @@ process {
         publishDir = [
             path: { "${params.outdir}/correct/" },
             mode: params.publish_dir_mode,
-            saveAs: { filename -> filename.equals('versions.yml') ? null : "${filter_list.toString() - '.seqnames'}.correct.fna.gz" }
+            saveAs: { filename -> filename.equals('versions.yml') ? null : "${filter_list.toString() - '.seqnames'}.fna.gz" }
         ]
     }
 
