Copy alignment to iqtree directory

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -78,6 +78,14 @@ process {
         ]
     }
 
+    withName: GTDBFIXNAMES {
+        publishDir = [
+            path: { "${params.outdir}/iqtree/" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : "${params.markername}-sprep.alnfna" }
+        ]
+    }
+
     withName: FINALFASTAS {
         publishDir = [
             path: { "${params.outdir}/correct/" },
