--- a/nextflow.config
+++ b/nextflow.config
@@ -220,7 +220,7 @@ manifest {
     description     = """Checks the phylogenetic signal in a set of sequences and outputs those that pass the check."""
     mainScript      = 'main.nf'
     nextflowVersion = '!>=23.04.0'
-    version         = '1.0dev'
+    version         = '1.0'
     doi             = ''
 }
 
