Read NCBI genome info and filter contaminated

--- a/nextflow.config
+++ b/nextflow.config
@@ -14,6 +14,7 @@ params {
     hmm                         = null
     hmmkey                      = null
     gtdb_metadata               = null
+    ncbi_genome_data            = "ftp://ftp.ncbi.nlm.nih.gov/genomes/ASSEMBLY_REPORTS/assembly_summary_genbank.txt,ftp://ftp.ncbi.nlm.nih.gov/genomes/ASSEMBLY_REPORTS/assembly_summary_refseq.txt"
     phylogeny                   = null
     markername                  = 'markers'
     model                       = 'GTR+F+G+I'
